# AoC

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
src/: aoc_client.rs  domain.rs  gamma.rs  github_client.rs  main.rs  redis.rs
src/db/: mod.rs  schema.sql
src/domain/: aoc_id.rs  context.rs  leaderboard.rs  mod.rs  participate.rs  year.rs
static/: styles.css
templates/: about.html.tera  base.html.tera  index.html.tera  leaderboard.html.tera  settings.html.tera
