[package]
name = "digit-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "^1.4", features = ["postgres"] }
futures = "^0.3.0"
lazy_static = "^1.4"
oauth2 = "^4.1"
r2d2_redis = "^0.14"
reqwest = { version = "^0.11.0", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
serde = "^1.0"
